# root_digger

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  makefile  model.h
benchmark/: CMakeLists.txt
benchmark/src/: CMakeLists.txt  main.cpp  model.cpp  tree.cpp
doc/: README.md
docs/: README.md
docs/tex/: .gitignore  letter_editor.md  main.bib  main.tex
docs/tex/dot/: exhaustive_mode.dot  search_mode.dot
docs/tex/figs/angio/: cds12_no_outgroup_lwr.newick  cds12_outgroup_lwr.newick
docs/tex/figs/ficus/: ficus_no_outgroup_lwr.newick  ficus_outgroup_lwr.newick
docs/tex/figs/spiders/: 1rate.newick  2rate.newick  missing_species_no_outgroup_lwr.newick  missing_species_outgroup_lwr.newick  mito_no_outgroup_lwr.newick  mito_outgroup_lwr.newick
docs/tex/tables/: datasets.tex  emperical_results.tex  results.tex  time_results.tex
exp/: .gitattributes  .gitignore  10.tree  100.tree  1000.tree  10000.tree  datasets.yaml  drawlh.py  emperical_data.tar.bz2  empirical_data.tar.bz2  make_exp.py  master_control.txt  plot.r  run_emp.py  uniform.freqs
exp/angiosperms/: CDS12_FcC_supermatrix.fas  CDS_FcC_supermatrix.fas  RAxML_bipartitions.CDS12_partition  RAxML_bipartitions.CDS_FcC_partition  cds12_outgroup_removed.fasta  cds12_outgroup_removed.tree  cds_outgroup_removed.fasta  cds_outgroup_removed.tree  readme.md
exp/grasses/: plastid245.fasta  plastid245.nex  plastid245.nwk  readme.md
exp/spiders/: convert.py  missing_species.fasta  missing_species.nex  mitocondrial.fasta  mitocondrial.nex  ml_missing_species.tree  ml_mitdochondrial.tree  ml_noncoding.tree  ml_primary.tree  noncoding.nex  primary.nex  readme.md
exp/spiders/original/: Leduc-Robert&Maddison_Habronattus-AlignedMatrices.tgz  Leduc-Robert&Maddison_Habronattus-Trees.nex
lib/: CMakeLists.txt
lib/lbfgsb/: CMakeLists.txt  License.txt  lbfgsb.c  lbfgsb.h  linesearch.c  linpack.c  miniCBLAS.c  subalgorithms.c
src/: CMakeLists.txt  checkpoint.cpp  checkpoint.hpp  debug.h  main.cpp  model.cpp  model.hpp  msa.cpp  msa.hpp  tree.cpp  tree.hpp  util.cpp  util.hpp
test/: CMakeLists.txt  makefile
test/data/: 101.phy
test/data/dna/: 10.fasta  125.phy  single.phy
test/data/model/: protein_random.model  random_unsym.model  special_unsym_sym.model  uni_sym.model
test/data/protein/: 140.phy
test/data/tree/: 10.tree  101.tree  125.tree  140.tree  sanity_check1.tree  sanity_check2.tree  sanity_check3.tree  single.tree
test/src/: CMakeLists.txt  checkpoint.cpp  data.cpp  data.hpp  main.cpp  model.cpp  msa.cpp  test_util.cpp  test_util.hpp  tree.cpp  util.cpp
